--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+      apiKey: "AIzaSyCwsN6UMvNrvE0kHTTPNo9RAUT_f-jtFRA",
+      authDomain: "fichateste-6b317.firebaseapp.com",
+      projectId: "fichateste-6b317",
+      storageBucket: "fichateste-6b317.appspot.com",
+      messagingSenderId: "419615463454",
+      appId: "1:419615463454:web:5a046b1ff16436a43ab60f"
+    };    
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
